trying to fix nav in header :(

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="logo">
         <img src="./resources/images/img-tea-cozy-logo.png"
       </div>
-      <div>
+      <div class="tcnav">
         <nav>
           <a href="#mission">Mission</a>
           <a href="#featured_tea">Featured Tea</a>
