--- a/index.html
+++ b/index.html
@@ -9,29 +9,60 @@
     <!-- header -------------------------------------->
     <header>
       <div class="logo">
-        <img src="./resources/images/img-tea-cozy-logo.png"
+        <img src="./resources/images/img-tea-cozy-logo.png">
       </div>
-      <div class="tcnav">
-        <nav>
+      <nav>
           <a href="#mission">Mission</a>
           <a href="#featured_tea">Featured Tea</a>
           <a href="#locations">Locations</a>
-        </nav>
-      </div>
+      </nav>
     </header>
 
-    <!-- Mission -------------------------------------->
+    <!-- main content  -------------------------------------->
     <div class="content">
+
+      <!-- Mission -------------------------------------->
+
       <div id="mission">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair   Trade, Organic Tea
-        </h4>
+        <!-- <div class="text"> -->
+        <div class="mission-logo image_content">
+            <span>
+              <h2>Our Mission</h2>
+              <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+              </h4>
+            </span>
+          </div>
       </div>
 
       <!-- Featured Tea -------------------------------------->
       <div id="featured_tea">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="teas-of-the-month image_content"
+        <span>
+          <h2>Tea of the Month</h2>
+          <p>What's Steeping at The Tea Cozy?</p>
+        </span>
+        <div class="teas">
+          <div class="tea-or-cake">
+            <img src="./resources/images/img-berryblitz.jpg">
+            <p>Fall Berry Blitz Tea</p>
+          </div>
+          <div class="tea-or-cake">
+            <img src="./resources/images/img-spiced-rum.jpg">
+            <p>Spiced Rum Tea</p>
+          </div>
+          <div class="tea-or-cake">
+            <img src="./resources/images/img-donut.jpg">
+            <p>Seasonal Donuts</p>
+          </div>
+          <div class="tea-or-cake">
+            <img src="./resources/images/img-myrtle-ave.jpg">
+            <p>Myrtle Ave Tea</p>
+          </div>
+          <div class="tea-or-cake">
+            <img src="./resources/images/img-bedford-bizarre.jpg">
+            <p>Bedford Bizarre Tea</p>
+          </div>
+        </div>
       </div>
 
       <!-- Locations -------------------------------------->
@@ -50,6 +81,7 @@
 
     <!-- Footer with copyright info -->
     <footer>
+      copyright The Tea Cozy 2017
     </footer>
   </body>
 </html>
