--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <!-- Mission -------------------------------------->
 
       <div id="mission">
-        <!-- <div class="text"> -->
         <div class="mission-logo image_content">
             <span>
               <h2>Our Mission</h2>
@@ -66,10 +65,34 @@
       </div>
 
       <!-- Locations -------------------------------------->
-      <div id="locations">
-        <h2>Locations</h2>
-      </div>
 
+      <div id="locations">
+        <div class="locations-bkgd image_content">
+          <span>
+            <h2>Locations</h2>
+          </span>
+       </div>
+       <div class="all_locations">
+         <div class="cafe">
+           <h3>Downtown</h3>
+           <p>384 West 4th St</p>
+           <p>Suite 108</p>
+           <p>Portland, Maine</p>
+         </div>
+         <div class="cafe">
+           <h3>East Bayside</h3>
+           <p>3433 Phisherman's Avenue</p>
+           <p>(Northwest Corner)</p>
+           <p>Portland, Maine</p>
+         </div>
+         <div class="cafe">
+           <h3>Oakdale</h3>
+           <p>515 Crescent Avenue</p>
+           <p>Second Floor</p>
+           <p>Portland, Maine</p>
+         </div>
+       </div>
+      </div>
 
       <!-- Contact -------------------------------------->
       <div class="contact">
